fixed wrapping; deleted contact and contact links; wrote parkourmeister page; corrected page title

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,18 +33,20 @@
                             <li class="nav-item p-1">
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/projects/">Projects</a>
                             </li>
-                            <li class="nav-item p-1">
-                                <a class="nav-link text-light" href="https://danielbusse.github.io/contact/">Contact</a>
-                            </li>
                         </ul>
                     </div>
                 </nav>
             </header>
-            <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
+            <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
                     <h1>Portfolio is beeing edited right now....</h1>
                     <p class="lead">
                         I need to reformat my Portfolio to be more compact and better readable. Check out my CV or Projects if you are interested!
+                        <!--
+                        My Portfolio includes projects of different topics like ______.
+                        You can read about them under projects.
+                        
+                        -->
                     </p>
                     <p>
                         You can find my CV <a class="text-info" href="https://danielbusse.github.io/cv_eng.pdf">here</a> and also in german <a class="text-info" href="https://danielbusse.github.io/cv_ger.pdf">here</a>.
