--- a/projects/index.html
+++ b/projects/index.html
@@ -33,9 +33,6 @@
                             <li class="nav-item p-1">
                                 <a class="nav-link text-light fw-bold active" aria-current="page" href="https://danielbusse.github.io/projects/">Projects</a>
                             </li>
-                            <li class="nav-item p-1">
-                                <a class="nav-link text-light" href="https://danielbusse.github.io/contact/">Contact</a>
-                            </li>
                         </ul>
                     </div>
                 </nav>
@@ -46,6 +43,23 @@
                     <p class="lead">These are some projects i worked on in the past.</p>
                     <p class="text-warning">But i am currenly still writing the text for these project pages! :)</p>
                     </p>
+                    <div class="container col-md-6 w-75">
+                        <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
+                            <div class="col p-4 d-flex flex-column position-static">
+                                <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">Drone, Automation, Sensor</strong>
+                                <h3 class="p-2">Telematikprojekt</h3>
+                                <p class="card-text mb-4">
+                                    Detecting radioactive radiation with an autonomous Drone and displaying it
+                                </p>
+                                <div>
+                                    <a href="https://danielbusse.github.io/projects/b-thesis/" 
+                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
+                                        Read More
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="container col-md-6 w-75">
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
