--- a/index.html
+++ b/index.html
@@ -33,14 +33,11 @@
                             <li class="nav-item p-1">
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/projects/">Projects</a>
                             </li>
-                            <li class="nav-item p-1">
-                                <a class="nav-link text-light" href="https://danielbusse.github.io/contact/">Contact</a>
-                            </li>
                         </ul>
                     </div>
                 </nav>
             </header>
-            <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
+            <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
                     <h1 class="p-1 mb-4">Hello, i am Daniel Busse!</h1>
                     <p class="lead p-1">I am a master's student in the field of Telematics at the Technical University of Applied Sciences 
