--- a/projects/telematikprojekt/index.html
+++ b/projects/telematikprojekt/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Portfolio of Daniel Busse">
         <meta name="author" content="Daniel Busse">
 
-        <title>Daniel Busse | Contact</title>
+        <title>Daniel Busse | Telematikprojekt</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
@@ -31,19 +31,16 @@
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/portfolio/">Portfolio</a>
                             </li>
                             <li class="nav-item p-1">
-                                <a class="nav-link text-light" href="https://danielbusse.github.io/projects/">Projects</a>
-                            </li>
-                            <li class="nav-item p-1">
-                                <a class="nav-link text-light fw-bold active" aria-current="page" href="https://danielbusse.github.io/contact/">Contact</a>
+                                <a class="nav-link text-light fw-bold active" aria-current="page" href="https://danielbusse.github.io/projects/">Projects</a>
                             </li>
                         </ul>
                     </div>
                 </nav>
             </header>
-            <main class="d-flex px-3 h-100 flex-grow-1 align-items-center">
+            <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
-                    <h1>Contact is comming soon....??</h1>
-                    <p class="lead">I have to decide whether you will be able to and on how to contact me directly.</p>
+                    <h1>Telematikprojekt</h1>
+                    <p class="lead">I still have to write text here :(</p>
                     </p>
                 </div>
             </main>
