--- a/projects/naolino/index.html
+++ b/projects/naolino/index.html
@@ -38,7 +38,7 @@
                 </nav>
             </header>
             <main class="d-flex px-3 flex-grow-1 align-items-center">
-                <div class="container d-flex flex-column">
+                <div class="container d-flex flex-column w-75">
                     <h1 class="text-center p-5">NaoLino - Detecting Objects</h1>
                     <p class="lead p-2 font-monospace">
                         This project emerged out of the Software Engineering II course of my Bachelor. Here we had to develop an algorithm for a task of choice 
@@ -46,32 +46,37 @@
                         <a href="https://icampus.th-wildau.de/cms/roboticlab/studierendenprojekte" class="text-info">here</a>.
                     </p>
                     <p class="p-2">
-                        My project partner and me chose to double down on the field of image recognition and wanted to implement an algorithm to detect objects. 
-                        Our Goal was to detect multiple diffent objects with different techniques.
+                        My project partner and I chose to double down on the field of image recognition and wanted to implement an algorithm to detect objects. 
+                        Our Goal was to detect multiple diffent objects with different techniques. The first was template maching and the second a cascade classifier.
+                        We tried to detect three objects. The lock of the container the robot was stored in, an apple and a banana.
                     </p>
                     <p class="p-2">
-                        .
+                        We tried to detect the lock by using template matching from opencv. This is a technique were you try to find a template in an image by moving it over the 
+                        image and find spots that match the template. You can see the template and a result of the matching below.
                     </p>
                     <img src="https://danielbusse.github.io/img/lock_template.jpg" class="mx-auto d-block img-fluid p-4" alt="Template of the Lock for template maching">
-                    <img src="https://danielbusse.github.io/img/lock_template_detected.jpg" class="mx-auto d-block img-fluid p-4" alt="Lock detected by template maching">
+                    <img src="https://danielbusse.github.io/img/lock_template_detected.png" class="mx-auto d-block img-fluid p-4" alt="Lock detected by template maching">
+                    <p>
+                        For detecting the fruits we tried to train a cascade classifier from opencv on images we provided ourselves. We created a positives/negatives dataset for the 
+                        classiefierto train on. For training we used my home computer with a GPU. This was not a very good idea that did cost us a lot of our project time. 
+                        We would have been able to use ressources of our university but didnt think about asking or existing datasets with huge amounts of data. But we 
+                        underestimated the time needed for training and the neccessaty of a lot of data for training.
+                    </p>
                     <p class="p-2">
                         The result of the project is mixed. We did get template maching to work easy and relativley reliable. However, we were not be able to train the 
                         cascade classifier to detect objects reliably. The results where ambigous and were higly dependent on luck to detect an object correctly. This was 
-                        due to our lack of experience in the training process. We had not collected enough Data and only used our personal hardware to train the classifer. 
+                        due to our lack of experience on the topic. We had not collected enough Data and only used our personal hardware to train the classifer. 
                     </p>
-                    <p>
-                        We were able to detect objects because we used multiple techniques. We consider this project still a success because we have learned a lot not only 
-                        about object detection but also on how to approach a unknown and difficult topic. If you are interested in the results you can find a small recorded snippet of the presentation below.
+                    <p class="p-2">
+                        We were able to detect objects in the end because we used multiple techniques. We consider this project still a success because we have learned a lot not only 
+                        about object detection but also on how to approach a unknown and difficult topic. If you are interested in the results you can find a small recorded 
+                        snippet of the presentation below. 
                     </p>
+                    <p class="p-1 fst-italic">(The video was cut a little weird by iCampus, but the detection of the apple was successful int he second try, after the cut. You can 
+                        hardly hear the Nao say "Apfel habe ich links gefunden.")</p>
                     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/J_lsKlnu7mg?si=mWkvYRX2Q44YdHAU" title="YouTube video player" frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
                         allowfullscreen></iframe>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/J_lsKlnu7mg?si=Ff8FguC4XDqQgb_p" title="YouTube video player" frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
-                        allowfullscreen></iframe>
-                </div>
-                <div class="container d-flex flex-column w-75 text-start"></div>
-                                      
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
