varios changes in formatting; added ronaldo

--- a/projects/b-thesis/index.html
+++ b/projects/b-thesis/index.html
@@ -38,9 +38,13 @@
                 </nav>
             </header>
             <main class="d-flex px-3 flex-grow-1 align-items-center">
-                <div class="container d-flex flex-column">
-                    <h1>Bachelor Thesis</h1>
-                    <p class="lead">I still have to write text here :(</p>
+                <div class="container d-flex flex-column w-75 text-start">
+                    <h1 class="text-center p-5">Bachelor Thesis</h1>
+                    <p class="lead font-monospace">
+                        I still have to write text here :(
+                    </p>
+                    <p class="p-2">
+
                     </p>
                 </div>
             </main>
