--- a/projects/telematikprojekt/index.html
+++ b/projects/telematikprojekt/index.html
@@ -38,9 +38,14 @@
                 </nav>
             </header>
             <main class="d-flex px-3 flex-grow-1 align-items-center">
-                <div class="container d-flex flex-column">
-                    <h1>Telematikprojekt</h1>
-                    <p class="lead">I still have to write text here :(</p>
+                <div class="container d-flex flex-column w-75 text-start">
+                    <h1 class="text-center p-5">Telematikprojekt</h1>
+                    <p class="lead font-monospace">
+                        The "Telematikprojekt" is a project in the curriculum of the telematics master on my university that streches over two semesters with 
+                        the first beeing the planning phase and the second beeing the development phase.
+                    </p>
+                    <p class="p-2">
+                        Text comming soon!
                     </p>
                 </div>
             </main>
