added images to b-thesis

--- a/projects/b-thesis/index.html
+++ b/projects/b-thesis/index.html
@@ -41,11 +41,35 @@
                 <div class="container d-flex flex-column w-75 text-start">
                     <h1 class="text-center p-5">Bachelor Thesis</h1>
                     <p class="lead font-monospace">
-                        I still have to write text here :(
+                        My bachelors thesis was about "Lane detection by a 3D camera in a Robotic Operating System with Open Computer Vision". 
                     </p>
                     <p class="p-2">
-
+                        This page will be added soon
                     </p>
+                    <div class="row">
+                        <div class="col">
+                            <div class="row">
+                                <img src="https://danielbusse.github.io/img/35.jpg" class="mx-auto d-block img-fluid p-4" alt="visualization of the detection">
+                            </div>
+                            <div class="row">
+                                <img src="https://danielbusse.github.io/img/37.jpg" class="mx-auto d-block img-fluid p-4" alt="visualization of the detection">
+                            </div>
+                            <div class="row">
+                                <img src="https://danielbusse.github.io/img/39.jpg" class="mx-auto d-block img-fluid p-4" alt="visualization of the detection">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="row">
+                                <img src="https://danielbusse.github.io/img/36.jpg" class="mx-auto d-block img-fluid p-4" alt="visualization of the detection">
+                            </div>
+                            <div class="row">
+                                <img src="https://danielbusse.github.io/img/38.jpg" class="mx-auto d-block img-fluid p-4" alt="visualization of the detection">
+                            </div>
+                            <div class="row">
+                                <img src="https://danielbusse.github.io/img/40.jpg" class="mx-auto d-block img-fluid p-4" alt="visualization of the detection">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
