--- a/projects/index.html
+++ b/projects/index.html
@@ -52,7 +52,7 @@
                                     Detecting radioactive radiation with an autonomous Drone and displaying it
                                 </p>
                                 <div>
-                                    <a href="https://danielbusse.github.io/projects/b-thesis/" 
+                                    <a href="https://danielbusse.github.io/projects/telematikprojekt/" 
                                     class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
                                         Read More
                                     </a>
