--- a/projects/naolino/index.html
+++ b/projects/naolino/index.html
@@ -75,7 +75,7 @@
                     </p>
                     <p class="p-1 fst-italic">(The video was cut a little weird by iCampus, but the detection of the apple was successful int he second try, after the cut. You can 
                         hardly hear the Nao say "Apfel habe ich links gefunden.")</p>
-                    <div class="items-align-center">
+                    <div class="items-align-center text-center">
                         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/J_lsKlnu7mg?si=mWkvYRX2Q44YdHAU" title="YouTube video player" frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
                         allowfullscreen></iframe>
