--- a/projects/telematikprojekt/index.html
+++ b/projects/telematikprojekt/index.html
@@ -45,7 +45,7 @@
                         the first beeing the planning phase and the second beeing the development phase.
                     </p>
                     <p class="p-2">
-                        Text comming soon!
+                        This page will be added in soon!
                     </p>
                 </div>
             </main>
