added images to telematikprojekt

--- a/projects/b-thesis/index.html
+++ b/projects/b-thesis/index.html
@@ -43,7 +43,7 @@
                     <p class="lead font-monospace">
                         My bachelors thesis was about "Lane detection by a 3D camera in a Robotic Operating System with Open Computer Vision". 
                     </p>
-                    <p class="p-2">
+                    <p class="p-2 text-warning">
                         This page will be added soon
                     </p>
                     <div class="row">
