--- a/projects/telematikprojekt/index.html
+++ b/projects/telematikprojekt/index.html
@@ -44,9 +44,18 @@
                         The "Telematikprojekt" is a project in the curriculum of the telematics master on my university that streches over two semesters with 
                         the first beeing the planning phase and the second beeing the development phase.
                     </p>
-                    <p class="p-2">
+                    <p class="p-2 text-warning">
                         This page will be added in soon!
                     </p>
+                    <img src="https://danielbusse.github.io/img/1.png" class="mx-auto d-block img-fluid p-4" alt="Drone">
+                    <div class="row">
+                        <div class="col">
+                            <img src="https://danielbusse.github.io/img/2.png" class="mx-auto d-block img-fluid p-4" alt="Drone with labels">
+                        </div>
+                        <div class="col">
+                            <img src="https://danielbusse.github.io/img/3.png" class="mx-auto d-block img-fluid p-4" alt="Drone with labels">
+                        </div>
+                    </div>
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
