--- a/projects/index.html
+++ b/projects/index.html
@@ -17,7 +17,7 @@
             }
         </style>
     </head>
-    <body class="d-flex text-center mb-auto text-white" style="background-color: rgb(49, 97, 55);">
+    <body class="d-flex text-center mb-auto text-white" style="background-color: #376f55;">
         <div class="container d-flex flex-column w-100 p-3">
             <header class="container mb-4">
                 <nav class="navbar navbar-expand-sm">
