updated linkedin link and cv's

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -52,7 +52,7 @@
                         You can find my CV <a class="text-info" href="https://danielbusse.github.io/cv_eng.pdf">here</a> and also in german <a class="text-info" href="https://danielbusse.github.io/cv_ger.pdf">here</a>.
                     </p>
                     <p>
-                        Check out my <a class="text-info" href="https://www.linkedin.com/in/daniel-busse-a3bbb6146/">LinkedIn</a>
+                        Check out my <a class="text-info" href="https://www.linkedin.com/in/danielbusse97/">LinkedIn</a>
                     </p>
                     <p>
                         Check out my <a class="text-info" href="https://github.com/danielbusse/">GitHub</a>
