--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -62,24 +62,27 @@
                                     I have taken part in various interesting projects you can find a selection here:
                                 </p>
                                 
-                                <a class="btn btn-outline-light m-2" href="https://www.linkedin.com/projects/">
+                                <a class="btn btn-light m-2" href="https://danielbusse.github.io/projects/">
                                     Check out Projects
                                 </a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col">
-                                <a class="btn btn-outline-light" href="https://danielbusse.github.io/cv_eng.pdf">Read my CV</a>
+                                <a class="btn btn-light" href="https://danielbusse.github.io/cv_eng.pdf">
+                                    <img src="https://danielbusse.github.io/img/icons/cv-icon.png" height="20">
+                                    Read my CV
+                                </a>
                             </div>
                             <div class="col">
-                                <a class="btn btn-outline-light" href="https://www.linkedin.com/in/danielbusse97/">
-                                    <img src="danielbusse.github.io/img/icons/LI-In-Bug.png" height="20">
+                                <a class="btn btn-light" href="https://www.linkedin.com/in/danielbusse97/">
+                                    <img src="https://danielbusse.github.io/img/icons/LI-In-Bug.png" height="20">
                                     Check out my LinkedIn
                                 </a>
                             </div>
                             <div class="col">
-                                <a class="btn btn-outline-light" href="https://github.com/danielbusse/">
-                                    <img src="danielbusse.github.io/img/icons/github-mark-white.png" height="20">
+                                <a class="btn btn-light" href="https://github.com/danielbusse/">
+                                    <img src="https://danielbusse.github.io/img/icons/github-mark.png" height="20">
                                     Check out my GitHub
                                 </a>
                             </div>
